--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,11 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-<dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-lang3</artifactId>
-    <version>3.12.0</version>
-</dependency>
-
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -68,6 +67,9 @@
       <plugin>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.2</version>
+        <configuration>
+          <!-- You can specify additional configurations here if needed -->
+        </configuration>
       </plugin>
       <!-- Tomcat 9 Maven plugin for deployment -->
       <plugin>
@@ -80,6 +82,12 @@
           <password>baba123</password>
           <path>/webappballi</path>
         </configuration>
+      </plugin>
+      <!-- Add this if you want to deploy to a repository -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
       </plugin>
       <!-- Site plugin -->
       <plugin>
